tests/build/fail/widget_new/malformed_property_path1.rs
use zero_ui::widgets::blank;

fn main() {
    let _ = blank! {
        _ = 0;
    };
}
