tests/build/fail/widget_new/malformed_property_path1.stderr
error: expected identifier
 --> $DIR/malformed_property_path1.rs:5:9
  |
5 |         _ = 0;
  |         ^
